Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1380,7 +1380,12 @@ Existem 4 formas diferentes de chamar o método checkoutOrder:
 
 Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `checkoutOrder()` para receber os estados relacionados ao pagamento.
 
-> PaymentListener: Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. As seguintes ações podem ser notificadas:  * onStart - Quando se dá o início do pagamento. * onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um * pagamento. * onCancel - Quando o pagamento é cancelado. * onError - Quando acontece um erro no pagamento do pedido.
+> PaymentListener: Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. 
+As seguintes ações podem ser notificadas:  
+• onStart - Quando se dá o início do pagamento. 
+• onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um pagamento. 
+• onCancel - Quando o pagamento é cancelado. 
+• onError - Quando acontece um erro no pagamento do pedido.
 
 ```
 PaymentListener paymentListener = new PaymentListener() {
@@ -1403,6 +1408,71 @@ PaymentListener paymentListener = new PaymentListener() {
     }
 };
 ```
+
+O método `onPayment()` retorna um objeto `Order` com uma lista de `Payment` que possui um HashMap `PaymentFields` com a maioria dos dados da transação.
+Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
+
+| Nome do Campo            | Descrição do Campo                                                 | Valor Exemplo                            |
+|--------------------------|--------------------------------------------------------------------|------------------------------------------|
+| clientName               | Nome do Portador                                                   | VISA ACQUIRER TEST CARD 03               |
+| hasPassword              | Validar se a operação pediu senha                                  | true                                     |
+| primaryProductCode       | Código do produto primário                                         | 4                                        |
+| primaryProductName       | Nome do produto primário                                           | CREDITO                                  |
+| upFrontAmount            | Valor da entrada da transação                                      | 2500                                     |
+| creditAdminTax           | Valor da taxa de administração de crédito                          | 0                                        |
+| firstQuotaDate           | Data de débito da primeira parcela                                 | 25/12/2018 (dd/MM/yyy)                   |
+| externalCallMerchantCode | Número do Estabelecimento Comercial                                | 0010000244470001                         |
+| hasSignature             | Validar se a operação pediu assinatura                             | false                                    |
+| hasPrintedClientReceipt  | Validar se imprimiu a via do cliente                               | false                                    |
+| applicationName          | Pacote da aplicação                                                | cielo.launcher                           |
+| interestAmount           | Valor de juros                                                     | 5000                                     |
+| changeAmount             | Valor de troco                                                     | 4500                                     |
+| serviceTax               | Taxa de serviço                                                    | 2000                                     |
+| cityState                | Cidade - Estado                                                    | Barueri - SP                             |
+| v40Code                  | Tipo da transação                                                  | 5 (Lista de Tipos de transação)   |
+| secondaryProductName     | Nome do produto secundario                                         | PARC. ADM                                |
+| paymentTransactionId     | ID da transação de pagamento                                       | 98437.29102507174                        |
+| pan                      | Número cartão tokenizado (6 primeiros dígitos – 4 últimos dígitos) | 476173-0036                              |
+| originalTransactionId    | ID da transação original, nos casos de cancelamento                | “0”                                      |
+| cardLabelApplication     | Tipo de aplicação utilizada pelo cartão na transação               | CREDITO DE VISA                          |
+| secondaryProductCode     | Código do produto secundário                                       | 205                                      |
+| documentType             | (J) = Pessoa Jurídica (F) = Pessoa Física                          | J                                        |
+| statusCode               | Status da transação1 - Autorizada 2 - Cancelada                    | 1                                        |
+| merchantAddress          | Endereço do estabelecimento comercial (lojista)                    | Alameda Grajau, 219                      |
+| merchantCode             | Número do Estabelecimento Comercial                                | 0010000244470001                         |
+| hasConnectivity          | Valida se a transação foi online                                   | true                                     |
+| productName              | forma de pagamento compilada                                       | CREDITO PARCELADO ADM - I                |
+| merchantName             | Nome Fantasia do Estabelecimento Comercial                         | LOJA ON                                  |
+| firstQuotaAmout          | Valor da primeira parcela                                          | 0                                        |
+| cardCaptureType          | Código do tipo de captura do cartão                                | 0 (Lista de Tipos de Captura) |
+| requestDate              | Data da requisição em milisegundos                                 | 1293857600000                            |
+| boardingTax              | Taxa de embarque                                                   | 1200                                     |
+| applicationId            | Pacote de aplicação                                                | cielo.launcher                           |
+| numberOfQuotas           | Número de parcelas                                                 | 2                                        |
+
+> Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00. Os outros objetos possuem documentação própria que 
+pode ser visualizada pelo Android Studio quando a classe é declarada.
+
+| Lista de Tipos de Captura                                    |
+|---------------------------|----------------------------------|
+| 0                         | Transação com cartão de chip     |
+| 1                         | Transação digitada               |
+| 2                         | Transação com cartão de tarja    |
+| 3                         | Transação com cartão contactless |
+
+| Lista de Tipos de Transação                                    |
+|-----------------------------|----------------------------------|
+| 4                           | Crédito à vista                  |
+| 5                           | Crédito parcelado administrativo |
+| 6                           | Crédito parcelado loja           |
+| 7                           | Pré autorização                  |
+| 8                           | Débito à vista                   |
+| 9                           | Débito pré datado                |
+| 10                          | Crediário venda                  |
+| 11                          | Crediário simulação              |
+| 13                          | Voucher alimentação/refeição     |
+| 28                          | Cancelamento de venda            |
+
 
 ### 1. Pagamento Parcial
 
@@ -1532,6 +1602,105 @@ Nessa forma de pagamento, é necessário apenas fazer a chamada do método envia
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+## Cancelamento
+
+Existem 2 formas de cancelar um pagamento na Cielo LIO:
+
+[Cancelar Pagamento Total](https://developercielo.github.io/manual/cielo-lio#cancelar-pagamento-total)
+
+[Cancelar Parte do Valor do Pagamento](https://developercielo.github.io/manual/cielo-lio#cancelar-parte-do-valor-de-um-pagamento)
+
+Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `cancelOrder()` para receber os estados relacionados ao cancelamento.
+
+> CancellationListener: Um callback que informa sobre todas as ações tomadas durante o processo de cancelamento. 
+As seguintes ações pode ser notificadas: 
+• onSuccess - Quando um cancelamento é realizado com sucesso. 
+• onCancel - Quando o usuário cancela a operação. 
+• onError - Quando acontece um erro no cancelamento do pedido.
+
+```
+
+CancellationListener cancellationListener = new CancellationListener() {
+    @Override
+    public void onSuccess(Order cancelledOrder) {
+        Log.d("SDKClient", "O pagamento foi cancelado.");
+    }
+    
+    @Override
+    public void onCancel() {
+        Log.d("SDKClient", "A operação foi cancelada.");
+    }
+
+    @Override
+    public void onError(PaymentError paymentError) {
+        Log.d("SDKClient", "Houve um erro no cancelamento");
+    }
+});
+
+```
+
+### Cancelar Pagamento Total
+
+No método Cancelar um Pagamento, é necessário ter salvo uma instância da Order que contém as informações da Order. Essa Order pode ser recuperada no sucesso do callback do pagamento ou usando o método de Listagem de Pedidos (Orders) (link para método). 
+Assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:
+
+```orderManager.cancelOrder(context, orderId, payment, cancellationListener);```
+
+Abaixo é detalhado cada um dos parâmetros enviados no método:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| context         | Contexto da sua aplicação. | String   |
+| orderID         | O identificador do pedido a ser pago. | Long   |
+| payment         | O pagamento a ser cancelado. | cielo.sdk.order.payment.Payment |
+| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | cielo.sdk.order.payment.CancellationListener |
+
+### Cancelar parte do valor de um pagamento
+
+No método Cancelar parte do valor de um Pagamento, é necessário ter salvo uma instância da Order que contém as informações da Order. Essa Order pode ser recuperada no sucesso do callback do pagamento ou usando o método de Listagem de Pedidos (Orders). 
+Os parâmetros do método anterior, com a inclusão de um parâmetro que é o valor a ser cancelado. 
+
+>Nesse cenário é preciso ter atenção para não passar um valor maior do que o do pagamento, caso contrário o sistema retornará um erro.
+
+Portanto, assim que possuir a instância da Order, utilize o método abaixo passando os parâmetros conforme o exemplo abaixo:
+
+```orderManager.cancelOrder(context, orderId, payment, value, cancellationListener);```
+
+Abaixo é detalhado cada um dos parâmetros enviados no método:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| context         | Contexto da sua aplicação. | String   |
+| orderID         | O identificador do pedido a ser pago. | Long   |
+| payment         | O pagamento a ser cancelado. | cielo.sdk.order.payment.Payment |
+| value           | O valor a ser cancelado. | Long   |
+| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. |  cielo.sdk.order.payment.CancellationListener |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+## Listagem de Pedidos
+
+Na listagem de pedidos, é possível obter todas os pedidos (Orders) abertas na Cielo LIO pelo aplicativo do parceiro. Para isso, basta utilizar a função abaixo:
+
+``` ResultOrders resultOrders = orderManager.retrieveOrders(10, 0); ```
+
+O objeto ResultOrders contém uma lista com todas as ordens abertas assinadas com as credenciais da aplicação.
+
+## Finalizar uso do OrderManager
+
+Após executar todas as operações de pagamento e caso não seja necessário utilizar o objeto orderManager, utilize método unbind para desvincular o contexto e evitar problemas de integridade. 
+
+Fique atento ao local onde o ``` unbind() ``` será executado para evitar problemas com ciclo de vida da Activity ou Fragment que foi vinculado ao serviço.
+É importante lembrar que se o contexto for alterado, é preciso desvincular o serviço (ex.: troca de Activity)
+Utilize o método abaixo para finalizar o uso do OrderManager:
+
+``` orderManager.unbind(); ```
 
 ---
 
