Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1455,6 +1455,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 > Os outros objetos - como `Order` e `Payment` possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.
 
 | Lista de Tipos de Captura                                    |
+| Código                    | Valor                            |
 |---------------------------|----------------------------------|
 | 0                         | Transação com cartão de chip     |
 | 1                         | Transação digitada               |
@@ -1462,6 +1463,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 | 3                         | Transação com cartão contactless |
 
 | Lista de Tipos de Transação                                    |
+| Código                      | Valor                            |
 |-----------------------------|----------------------------------|
 | 4                           | Crédito à vista                  |
 | 5                           | Crédito parcelado administrativo |
