Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1451,7 +1451,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 | numberOfQuotas           | Número de parcelas                                                 | 2                                        |
 
 > Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00. 
-> Os outros objetos - como `Order` e `Payment` possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.
+> Os outros objetos - como `Order` e `Payment` - possuem documentação própria que pode ser visualizada pelo Android Studio quando a classe é declarada.
 
 | Lista de Tipos de Captura                                    |
 | Código                    | Valor                            |
