Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1703,6 +1703,127 @@ Utilize o método abaixo para finalizar o uso do OrderManager:
 
 ``` orderManager.unbind(); ```
 
+## Impressão [Apenas LIO V2]
+
+A nova versão da Cielo LIO V2 permite que aplicações parceiras utilizem os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente. Para realizar estas operações, basta utilizar um dos métodos listados abaixo que permite a impressão de uma única linha, uma sequência de linhas, ou imagens.
+
+```PrinterManager printerManager = new PrinterManager(context)```
+
+Independende da forma de impressão escolhida, você deverá utilizar o seguinte callback como parâmetro do método de para receber os estados relacionados à impressão:
+
+> PrinterListener: Um callback que informa sobre todas as ações tomadas durante o processo de impressão. 
+As seguintes ações pode ser notificadas: 
+• onSuccess - Quando uma impressão é realizada com sucesso. 
+• onError - Quando acontece um erro na impressão.
+• onWithoutPaper - Quando não há papel suficiente para realizar a impressão.
+
+```
+PrinterListerner printerListener = new PrinterListener() {
+	@Override public void onPrintSuccess(int printedLines) { 
+		Log.d(TAG, "onPrintSuccess");
+	}
+	@Override public void onError(@Nullable Throwable e) { 
+		Log.d(TAG, "onError"); 
+	}
+	@Override public void onWithoutPaper() { 
+		Log.d(TAG,"onWithoutPaper"); 
+	} 
+});
+```
+
+### Mapa de Estilos de Impressão
+
+Você pode formatar a sua impressão criando mapas de estilos utilizando os parâmetros disponíveis:
+
+| Atributo        | Descrição | Valores  |
+|-----------------|-----------|----------|
+|PrinterManager.KEY_ALIGN| Alinhamento da impressão | PrinterManager.VAL_ALIGN_CENTER  PrinterManager.VAL_ALIGN_LEFT PrinterManager.VAL_ALIGN_RIGHT|
+|PrinterManager.KEY_TEXTSIZE| Tamanho do texto | Valores inteiros | 
+|PrinterManager.KEY_TYPEFACE| Fonte do texto | Trabalha com um inteiro de 0 a 8, onde cada um é uma fonte diferente.|
+|PrinterManager.KEY_MARGINLEFT| Margem esquerda |Valores inteiros | 
+|PrinterManager.KEY_MARGINRIGHT| Margem direia | Valores inteiros | 
+|PrinterManager.KEY_MARGINTOP| Margem superior | Valores inteiros | 
+|PrinterManager.KEY_MARGINBOTTOM| Margem inferior | Valores inteiros | 
+|PrinterManager.KEY_LINESPACE| Espaçamento entre as linhas | Valores inteiros | 
+|PrinterManager.KEY_WEIGHT| Varíavel utilizada quando se trbaalho com impressão de múltiplas colunas, para escolher o peso de cada coluna | Valores inteiros | 
+
+Exemplo de mapas de estilos:
+
+```
+HashMap<String, Integer> alignLeft =  new HashMap<>();
+alignLeft.put(PrinterAttributes.KEY_ALIGN, PrinterAttributes.VAL_ALIGN_LEFT);
+alignLeft.put(PrinterAttributes.KEY_MARGIN_TOP, 50);
+alignLeft.put(PrinterAttributes.KEY_MARGIN_BOTTOM, 50);
+alignLeft.put(PrinterAttributes.KEY_TYPEFACE, 0);
+alignLeft.put(PrinterAttributes.KEY_TEXT_SIZE, 20);
+
+HashMap<String, Integer> alignCenter =  new HashMap<>();
+alignCenter.put(PrinterAttributes.KEY_ALIGN, PrinterAttributes.VAL_ALIGN_CENTER);
+alignCenter.put(PrinterAttributes.KEY_MARGIN_TOP, 50);
+alignCenter.put(PrinterAttributes.KEY_MARGIN_BOTTOM, 50);        
+alignCenter.put(PrinterAttributes.KEY_TYPEFACE, 1);
+alignCenter.put(PrinterAttributes.KEY_TEXT_SIZE, 20);
+
+HashMap<String, Integer> alignRight =  new HashMap<>();
+alignRight.put(PrinterAttributes.KEY_ALIGN, PrinterAttributes.VAL_ALIGN_RIGHT);
+alignRight.put(PrinterAttributes.KEY_MARGIN_TOP, 50);
+alignRight.put(PrinterAttributes.KEY_MARGIN_BOTTOM, 50);
+alignRight.put(PrinterAttributes.KEY_TYPEFACE, 2);
+alignRight.put(PrinterAttributes.KEY_TEXT_SIZE, 20);
+```
+### Impressão de texto simples
+
+Para imprimir textos simples utilize o método ```printText()``` do PrinterManager. 
+O método recebe como parâmetro o texto a ser impresso, um mapa de estilo de impressão e um listener para tratar o retorno da impressão.
+
+```
+String textToPrint = "Texto simples a ser impresso.\n Com múltiplas linhas";
+printerManager.printText(textToPrint, alignLeft, printerListener);
+```
+
+| Atributo | Descrição | Domínio |
+|----------|-----------|---------|
+| text     | Texto a ser impresso. | `String` |
+| style    | Mapa de estilos de impressão | `Map<String, Int>` |
+| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+
+### Impressão de múltiplas colunas
+
+Para imprimir textos em múltiplas colunas utilize o método ```printMultipleColumnText()``` do PrinterManager. 
+O método recebe como parâmetro um array de texts a serem impresso, um array com mapas de estilos de impressão, respectivamente e um listener para tratar o retorno da impressão.
+
+```
+String[] textsToPrint = new String[] { "ALIGN LEFT", "ALIGN CENTER", "ALIGN RIGHT" }
+
+List<Map<String, Integer>> styles =  new ArrayList<>();
+styles.add(alignLeft);
+styles.add(alignCenter);
+styles.add(alignRight);
+
+printerManager.printMultipleColumnText(textsToPrint, styles, printerListener);
+```
+| Atributo | Descrição | Domínio |
+|----------|-----------|---------|
+| stringArray     | Lista de textos a serem impressos. | `String[]` |
+| style    | Lista de mapa de estilos de impressão | `List<Map<String, Int>>` |
+| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+
+### Impressão de imagem
+
+Para imprimir imagens utilize o método ```printImage()``` do PrinterManager. 
+O método recebe como parâmetro o `bitmap` a ser impresso, um mapa de estilos de impressão e um listener para tratar o retorno da impressão.
+
+```
+Bitmap bitmap = BitmapFactory.decodeResource(getResources(), R.drawable.cielo);
+printerManager.printImage(bitmap, alignCenter, printerListener);
+```
+
+| Atributo | Descrição | Domínio |
+|----------|-----------|---------|
+| bitmap     | Imagem a ser impressa. | `Bitmap` |
+| style    | Mapa de estilos de impressão | `Map<String, Int>` |
+| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+
 ---
 
 ## Fluxo para Integração
