Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1671,12 +1671,12 @@ Portanto, assim que possuir a instância da Order, utilize o método abaixo pass
 Abaixo é detalhado cada um dos parâmetros enviados no método:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| context         | Contexto da sua aplicação. | String   |
-| orderID         | O identificador do pedido a ser pago. | Long   |
-| payment         | O pagamento a ser cancelado. | cielo.sdk.order.payment.Payment |
-| value           | O valor a ser cancelado. | Long   |
-| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. |  cielo.sdk.order.payment.CancellationListener |
+|-----------------|--------------------------|-----------------------------------------|
+| context         | Contexto da sua aplicação. | `String` |
+| orderID         | O identificador do pedido a ser pago. | `Long` |
+| payment         | O pagamento a ser cancelado. | `cielo.sdk.order.payment.Payment` |
+| value           | O valor a ser cancelado. | `Long` |
+| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. |  `cielo.sdk.order.payment.CancellationListener` |
 
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
 
@@ -1719,15 +1719,17 @@ As seguintes ações pode ser notificadas:
 
 ```
 PrinterListerner printerListener = new PrinterListener() {
-	@Override public void onPrintSuccess(int printedLines) { 
-		Log.d(TAG, "onPrintSuccess");
-	}
-	@Override public void onError(@Nullable Throwable e) { 
-		Log.d(TAG, "onError"); 
-	}
-	@Override public void onWithoutPaper() { 
-		Log.d(TAG,"onWithoutPaper"); 
-	} 
+    @Override public void onPrintSuccess(int printedLines) { 
+        Log.d(TAG, "onPrintSuccess");
+    }
+    
+    @Override public void onError(@Nullable Throwable e) { 
+        Log.d(TAG, "onError"); 
+    }
+	
+    @Override public void onWithoutPaper() { 
+        Log.d(TAG,"onWithoutPaper"); 
+    } 
 });
 ```
 
@@ -1785,7 +1787,7 @@ printerManager.printText(textToPrint, alignLeft, printerListener);
 |----------|-----------|---------|
 | text     | Texto a ser impresso. | `String` |
 | style    | Mapa de estilos de impressão | `Map<String, Int>` |
-| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+| printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ### Impressão de múltiplas colunas
 
@@ -1806,7 +1808,7 @@ printerManager.printMultipleColumnText(textsToPrint, styles, printerListener);
 |----------|-----------|---------|
 | stringArray     | Lista de textos a serem impressos. | `String[]` |
 | style    | Lista de mapa de estilos de impressão | `List<Map<String, Int>>` |
-| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+| printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ### Impressão de imagem
 
@@ -1822,7 +1824,7 @@ printerManager.printImage(bitmap, alignCenter, printerListener);
 |----------|-----------|---------|
 | bitmap     | Imagem a ser impressa. | `Bitmap` |
 | style    | Mapa de estilos de impressão | `Map<String, Int>` |
-| printerListener | Callback de impressão. | cielo.sdk.order.PrinterListener |
+| printerListener | Callback de impressão. | `cielo.sdk.order.PrinterListener` |
 
 ---
 
