Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1525,11 +1525,11 @@ Esta função disponibilizará uma lista de objetos do tipo PrimaryProduct onde 
 Os seguintes campos serão retornados por essa função:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| id         |identificador do código no sistema. | Long   |
-| code         | utilizado na função de pagamento. | String   |
-| name         | Nome do método de pagamento para efeitos de exibição. | String   |
-| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | `ArrayList - SecondaryProduct`   |
+|-----------------|-------------------------------------------------------------------|-----------------------------------------|
+| id         |identificador do código no sistema. | `Long` |
+| code         | utilizado na função de pagamento. | `String` |
+| name         | Nome do método de pagamento para efeitos de exibição. | `String` |
+| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | `ArrayList<SecondaryProduct>`   |
 
 Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
 
@@ -1548,12 +1548,12 @@ orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
 Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | String   |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
-| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
-| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
+|-----------------|-------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
 
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
 
@@ -1568,13 +1568,13 @@ Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | String   |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
-| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
-| installments | Número de parcelas. | Long   |
-| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
+|-----------------|--------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
 
 **Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
 
@@ -1589,13 +1589,13 @@ Exatamente como o método anterior, com a diferença que neste caso é possível
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | String   |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
-| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
-| installments | Número de parcelas. | Long   |
-| paymentListener | Callback de pagamento | cielo.sdk.order.payment.PaymentListener |
+|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
 
 **Fluxo da transação utilizando o pagamento direto da Cielo LIO**
 
@@ -1651,11 +1651,11 @@ Assim que possuir a instância da Order, utilize o método abaixo passando os pa
 Abaixo é detalhado cada um dos parâmetros enviados no método:
 
 | Atributo        | Descrição  | Domínio|
-|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| context         | Contexto da sua aplicação. | String   |
-| orderID         | O identificador do pedido a ser pago. | Long   |
-| payment         | O pagamento a ser cancelado. | cielo.sdk.order.payment.Payment |
-| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | cielo.sdk.order.payment.CancellationListener |
+|-----------------|-----------------------------------------------------------------------|-----------------------------------------|
+| context         | Contexto da sua aplicação. | `String` |
+| orderID         | O identificador do pedido a ser pago. | `Long` |
+| payment         | O pagamento a ser cancelado. | `cielo.sdk.order.payment.Payment` |
+| cancellationListener | Callback que informa sobre todas as ações tomadas durante o processo de cancelamento. | `cielo.sdk.order.payment.CancellationListener` |
 
 ### Cancelar parte do valor de um pagamento
 
@@ -1726,7 +1726,7 @@ PrinterListerner printerListener = new PrinterListener() {
     @Override public void onError(@Nullable Throwable e) { 
         Log.d(TAG, "onError"); 
     }
-	
+    
     @Override public void onWithoutPaper() { 
         Log.d(TAG,"onWithoutPaper"); 
     } 
@@ -1804,6 +1804,7 @@ styles.add(alignCenter);
 styles.add(alignRight);
 
 printerManager.printMultipleColumnText(textsToPrint, styles, printerListener);
+
 ```
 
 | Atributo | Descrição | Domínio |
